test: implement tests for snowflake-import
will only run if JDBC_ADMIN_PASSWORD env is defined - this should be the snowflake admin password